prusti-tests/tests/parse/ui/implies_fail.stderr
error: expected expression
 --> $DIR/implies_fail.rs:8:17
  |
8 | #[requires(true ==>)]
  |                 ^^^

error: expected expression
  --> $DIR/implies_fail.rs:11:12
   |
11 | #[requires(==> true)]
   |            ^^

error: `==>` cannot be part of Rust expression
  --> $DIR/implies_fail.rs:14:18
   |
14 | #[requires((true ==> true) || true)]
   |                  ^^^

error: aborting due to 3 previous errors

